@@ -61,6 +61,7 @@ DBD::SQLite               = 1.29
 
 ; Words.pm
 Regexp::Common            = 2010010201
+Text::Unidecode           = 0
 
 ; everywhere
 namespace::clean          = 0.18
